// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render "" correctly 1`] = `
<button
  className="Button Button-ygn2tx-0 biecp flex-no-shrink"
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <div
      className=""
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "primary" correctly 1`] = `
<button
  className="Button Button-ygn2tx-0 biecp flex-no-shrink Button--primary"
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <div
      className=""
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "with an icon" correctly 1`] = `
<button
  className="Button Button-ygn2tx-0 biecp flex-no-shrink"
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <svg
      aria-label="star icon"
      className="Icon Icon-star Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={14}
      role="img"
      viewBox="0 0 32 32"
      width={14}
    >
      <path
        d="M16 0 L21 11 L32 12 L23 19 L26 31 L16 25 L6 31 L9 19 L0 12 L11 11"
      />
    </svg>
    <div
      className="ml1"
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`ButtonBar should render "default" correctly 1`] = `
<div
  className="sc-bwzfXH jruoDg"
>
  <div
    className="mr-auto sc-bwzfXH dtAxiM"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Button
        </div>
      </div>
    </button>
  </div>
  <div
    className="ml-auto sc-bwzfXH bSPfTz"
  />
</div>
`;

exports[`ButtonBar should render "left and right" correctly 1`] = `
<div
  className="sc-bwzfXH jruoDg"
>
  <div
    className="mr-auto sc-bwzfXH dtAxiM"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Left
        </div>
      </div>
    </button>
  </div>
  <div
    className="ml-auto sc-bwzfXH bSPfTz"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Right
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`ButtonBar should render "left, right, and center" correctly 1`] = `
<div
  className="sc-bwzfXH jruoDg"
>
  <div
    className="flex-full flex-basis-none sc-bwzfXH dtAxiM"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Left
        </div>
      </div>
    </button>
  </div>
  <div
    className="sc-bwzfXH jruoDg"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Center
        </div>
      </div>
    </button>
  </div>
  <div
    className="flex-full flex-basis-none sc-bwzfXH bSPfTz"
  >
    <button
      className="Button Button-ygn2tx-0 biecp flex-no-shrink"
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Right
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Card should render "dark" correctly 1`] = `
<div
  className="Card-fqt8sg-0 bnAjGM"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`Card should render "hoverable" correctly 1`] = `
<div
  className="Card-fqt8sg-0 fDXUKg"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`Card should render "normal" correctly 1`] = `
<div
  className="Card-fqt8sg-0 kYEIzT"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`CheckBox should render "Default - Off" correctly 1`] = `
<div
  aria-checked={undefined}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "white",
      "border": "2px solid #B8BBC3",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
/>
`;

exports[`CheckBox should render "Green" correctly 1`] = `
<div
  aria-checked={true}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "#88BF4D",
      "border": "2px solid #88BF4D",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
>
  <svg
    aria-label="check icon"
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    role="img"
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "On - Default blue" correctly 1`] = `
<div
  aria-checked={true}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "#509EE3",
      "border": "2px solid #509EE3",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
>
  <svg
    aria-label="check icon"
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    role="img"
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Purple" correctly 1`] = `
<div
  aria-checked={true}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "#A989C5",
      "border": "2px solid #A989C5",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
>
  <svg
    aria-label="check icon"
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    role="img"
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Red" correctly 1`] = `
<div
  aria-checked={true}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "#EF8C8C",
      "border": "2px solid #EF8C8C",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
>
  <svg
    aria-label="check icon"
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    role="img"
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Yellow" correctly 1`] = `
<div
  aria-checked={true}
  className="flex align-center justify-center cursor-pointer"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "backgroundColor": "#F9D45C",
      "border": "2px solid #F9D45C",
      "borderRadius": 4,
      "height": 16,
      "width": 16,
    }
  }
  tabIndex="0"
>
  <svg
    aria-label="check icon"
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    role="img"
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`ClampedText should render "Default" correctly 1`] = `
<div
  className="clamped-text"
>
  <div
    className="clamped-text--clamp ClampedText__ClampedDiv-sc-1i5vub8-0 kpOVj"
  >
    <div
      className="clamped-text--text"
    >
      Lorem ipsum 
       
       dolor sit amet, consectetur adipiscing elit. Cras sit amet sagittis dui. Morbi in odio laoreet, finibus erat vitae, sagittis dui. Ut at mauris eget ligula volutpat pellentesque. Integer non faucibus urna. Maecenas faucibus ornare gravida. Aliquam orci tortor, ullamcorper et vehicula accumsan, malesuada in ipsum. Nullam auctor, justo et mattis fringilla, enim ipsum aliquet nunc, quis posuere odio erat in nulla. Suspendisse elementum, est et rutrum volutpat, purus mi placerat odio, sit amet blandit nulla diam at lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut ultricies placerat mollis. Curabitur vestibulum semper turpis, id cursus ex dignissim id. Cras efficitur sed ligula ac dictum. Curabitur hendrerit metus eget vestibulum bibendum. Cras nulla arcu, condimentum in rhoncus eu, interdum ut sapien. Cras sed molestie tellus, quis aliquet nunc. Nulla nec est eu est condimentum facilisis sit amet et ex.
    </div>
  </div>
  <div
    className="clamped-text--footer"
  />
</div>
`;

exports[`ClampedText should render "No 'See more' button when all text visible" correctly 1`] = `
Array [
  <strong>
    A single line of text:
</strong>,
  <div
    className="clamped-text"
>
    <div
        className="clamped-text--clamp ClampedText__ClampedDiv-sc-1i5vub8-0 kpOVj"
    >
        <div
            className="clamped-text--text"
        >
            foo
        </div>
    </div>
    <div
        className="clamped-text--footer"
    />
</div>,
  <br />,
  <strong>
    Many lines of text, but an unset \`visibleLines\` prop:
</strong>,
  <div
    className="clamped-text"
>
    <div
        className="clamped-text--clamp ClampedText__ClampedDiv-sc-1i5vub8-0 MvTAX"
    >
        <div
            className="clamped-text--text"
        >
            Lorem ipsum 
             
             dolor sit amet, consectetur adipiscing elit. Cras sit amet sagittis dui. Morbi in odio laoreet, finibus erat vitae, sagittis dui. Ut at mauris eget ligula volutpat pellentesque. Integer non faucibus urna. Maecenas faucibus ornare gravida. Aliquam orci tortor, ullamcorper et vehicula accumsan, malesuada in ipsum. Nullam auctor, justo et mattis fringilla, enim ipsum aliquet nunc, quis posuere odio erat in nulla. Suspendisse elementum, est et rutrum volutpat, purus mi placerat odio, sit amet blandit nulla diam at lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut ultricies placerat mollis. Curabitur vestibulum semper turpis, id cursus ex dignissim id. Cras efficitur sed ligula ac dictum. Curabitur hendrerit metus eget vestibulum bibendum. Cras nulla arcu, condimentum in rhoncus eu, interdum ut sapien. Cras sed molestie tellus, quis aliquet nunc. Nulla nec est eu est condimentum facilisis sit amet et ex.
        </div>
    </div>
    <div
        className="clamped-text--footer"
    />
</div>,
]
`;

exports[`CollapseSection should render "Collapsed by default" correctly 1`] = `
<div
  aria-expanded={false}
  className="collapse-section"
  role="tab"
>
  <div
    className="collapse-section__header cursor-pointer flex align-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <svg
      aria-label="chevronright icon"
      className="Icon Icon-chevronright mr1 Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z "
      />
    </svg>
    <span
      className="collapse-section__header-text flex align-center"
    >
      Section header
    </span>
  </div>
  <div
    className="collapse-section__body-container"
    role="tabpanel"
  />
</div>
`;

exports[`CollapseSection should render "Components in header" correctly 1`] = `
<div
  aria-expanded={false}
  className="collapse-section"
  role="tab"
>
  <div
    className="collapse-section__header cursor-pointer flex align-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <svg
      aria-label="chevronright icon"
      className="Icon Icon-chevronright mr1 Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z "
      />
    </svg>
    <span
      className="collapse-section__header-text flex align-center"
    >
      <div>
        <svg
          aria-label="folder icon"
          className="Icon Icon-folder mr1 Icon-sc-1x67v3y-1 hFNRPZ"
          fill="currentcolor"
          height={12}
          role="img"
          viewBox="0 0 32 32"
          width={12}
        >
          <path
            d="M0 5l.01 21.658a2 2 0 0 0 2 1.999H30a2 2 0 0 0 2-2V7.705a2 2 0 0 0-2-2H17.51a1 1 0 0 1-.924-.615l-.614-1.474A1 1 0 0 0 15.049 3H1.999a2 2 0 0 0-2 2z"
          />
        </svg>
        Component header
      </div>
    </span>
  </div>
  <div
    className="collapse-section__body-container"
    role="tabpanel"
  />
</div>
`;

exports[`CollapseSection should render "Header and body classes" correctly 1`] = `
<div
  aria-expanded={true}
  className="collapse-section collapse-section--expanded"
  role="tab"
>
  <div
    className="collapse-section__header cursor-pointer flex align-center text-brand flex-reverse justify-between p1 border-bottom"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown mr1 Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
    <span
      className="collapse-section__header-text flex align-center"
    >
      Section header
    </span>
  </div>
  <div
    className="collapse-section__body-container"
    role="tabpanel"
  >
    <div
      className="collapse-section__body-container p2"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque tellus, mattis ut felis non, tempus mollis lacus. Vivamus nulla massa, accumsan non ligula eu, dapibus volutpat libero. Mauris sollicitudin dolor et ipsum fringilla auctor. Praesent et diam non nisi consequat ornare. Aenean et risus vel dolor maximus dapibus a id massa. Nam finibus quis libero eu finibus. Sed vehicula ac enim pellentesque luctus. Phasellus vehicula et ipsum porttitor mollis. Fusce blandit lacus a elit pretium, vestibulum porta nisi vehicula. Aliquam vel ligula enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque eget porta mi. Duis et lectus eget dolor convallis mollis. Sed commodo nec urna eget egestas.
        <br />
        <br />
        Mauris in ante sit amet ipsum tempus consequat. Curabitur auctor massa vitae dui auctor scelerisque. Donec in leo a libero commodo sodales. Integer egestas lacinia elit, vitae cursus sem mollis ut. Proin ut dapibus metus, vel accumsan justo. Pellentesque eget finibus elit, ut commodo felis. Ut non lacinia metus. Maecenas eget bibendum nisl.
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapseSection should render "Settable collpased/expanded initial state" correctly 1`] = `
<div
  aria-expanded={true}
  className="collapse-section collapse-section--expanded"
  role="tab"
>
  <div
    className="collapse-section__header cursor-pointer flex align-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown mr1 Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
    <span
      className="collapse-section__header-text flex align-center"
    >
      Foo
    </span>
  </div>
  <div
    className="collapse-section__body-container"
    role="tabpanel"
  >
    <div
      className="collapse-section__body-container"
    >
      foo foo foo foo foo
    </div>
  </div>
</div>
`;

exports[`ColorPicker should render "" correctly 1`] = `
<div
  className="inline-block"
>
  <a
    className="no-decoration"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    <div
      className="bordered rounded flex align-center"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": undefined,
            "borderRadius": 4,
            "height": 32,
            "width": 32,
          }
        }
      />
    </div>
    <span
      className="hide"
    />
  </a>
</div>
`;

exports[`ColorPicker should render "with value" correctly 1`] = `
<div
  className="inline-block"
>
  <a
    className="no-decoration"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    <div
      className="bordered rounded flex align-center"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#509ee3",
            "borderRadius": 4,
            "height": 32,
            "width": 32,
          }
        }
      />
    </div>
    <span
      className="hide"
    />
  </a>
</div>
`;

exports[`EntityMenu should render "Edit menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="pencil icon"
          className="Icon Icon-pencil Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M21.187 4.359L24.71.835c1.363-1.362 3.912-1.022 5.694.76 1.783 1.783 2.123 4.332.761 5.695l-3.523 3.523-6.455-6.454zM19.425 6.12L1.455 24.091C.091 25.453-.47 30.625.452 31.547c.922.922 6.094.361 7.456-1.001l17.97-17.971-6.454-6.455z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "More menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="burger icon"
          className="Icon Icon-burger Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M2.5 3.6h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 1 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "Multiple menus" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="pencil icon"
          className="Icon Icon-pencil Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M21.187 4.359L24.71.835c1.363-1.362 3.912-1.022 5.694.76 1.783 1.783 2.123 4.332.761 5.695l-3.523 3.523-6.455-6.454zM19.425 6.12L1.455 24.091C.091 25.453-.47 30.625.452 31.547c.922.922 6.094.361 7.456-1.001l17.97-17.971-6.454-6.455z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="share icon"
          className="Icon Icon-share Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M29.5 22.725c-1.46 0-2.5-1.183-2.5-2.643V9L5 31.226c-1.032 1.032-2.968 1.032-4 0S-.258 28.52.774 27.488L23 5H12c-1.46 0-2.725-1.04-2.725-2.5S10.54 0 12 0h16.5c2 0 3.5 1.5 3.5 4v16.082c0 1.46-1.04 2.643-2.5 2.643z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="burger icon"
          className="Icon Icon-burger Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M2.5 3.6h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 1 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "Share menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          aria-label="share icon"
          className="Icon Icon-share Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          role="img"
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M29.5 22.725c-1.46 0-2.5-1.183-2.5-2.643V9L5 31.226c-1.032 1.032-2.968 1.032-4 0S-.258 28.52.774 27.488L23 5H12c-1.46 0-2.725-1.04-2.725-2.5S10.54 0 12 0h16.5c2 0 3.5 1.5 3.5 4v16.082c0 1.46-1.04 2.643-2.5 2.643z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`ModalContent should render "default" correctly 1`] = `
<div
  className="rounded bordered"
>
  <div
    className="ModalContent flex-full flex flex-column relative"
    id={undefined}
  >
    <svg
      aria-label="close icon"
      className="Icon Icon-close text-light text-medium-hover cursor-pointer absolute z2 m2 p2 top right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={16}
      onClick={[Function]}
      role="img"
      viewBox="0 0 32 32"
      width={16}
    >
      <path
        d="M4 8 L8 4 L16 12 L24 4 L28 8 L20 16 L28 24 L24 28 L16 20 L8 28 L4 24 L12 16 z "
      />
    </svg>
    <div
      className="ModalHeader flex-no-shrink px4 py4 full"
    >
      <h2
        className="text-bold mr4"
      >
        Do something crazy?
      </h2>
    </div>
    <div
      className="ModalBody px4"
    >
      <div
        className="flex-full ml-auto mr-auto flex flex-column"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        Are you sure?
      </div>
    </div>
    <div
      className="ModalFooter flex flex-no-shrink px4 py3"
    >
      <div
        className="ml-auto flex align-center"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        <button
          className="Button Button-ygn2tx-0 biecp flex-no-shrink Button--danger"
        >
          <div
            className="flex layout-centered"
            style={null}
          >
            <div
              className=""
            >
              Ok
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Position should render "Absolute" correctly 1`] = `
<div
  className="yz785l-0-Position-kiwZOl ewxBZI sc-bdVaJa bTKLQy"
>
  Some content
  <div
    className="yz785l-0-Position-kiwZOl bzliMT sc-bdVaJa itORHd"
  >
    Some content positioned absolutely to its parent
  </div>
</div>
`;

exports[`Position should render "Relative" correctly 1`] = `
<div
  className="yz785l-0-Position-kiwZOl ewxBZI sc-bdVaJa iHZvIS"
>
  Some content relative to its parent
</div>
`;

exports[`ProgressBar should render "Animated" correctly 1`] = `
<div
  className="ProgressBar__ProgressWrapper-sc-11v0v62-0 gNslgH"
  color="#509EE3"
>
  <div
    className="ProgressBar__Progress-sc-11v0v62-1 gzZAJq"
    color="#509EE3"
    width={35}
  />
</div>
`;

exports[`ProgressBar should render "Default" correctly 1`] = `
<div
  className="ProgressBar__ProgressWrapper-sc-11v0v62-0 gNslgH"
  color="#509EE3"
>
  <div
    className="ProgressBar__Progress-sc-11v0v62-1 cmFRuU"
    color="#509EE3"
    width={75}
  />
</div>
`;

exports[`Radio should render "bubble" correctly 1`] = `
<ul
  className="Radio__BubbleList-sc-1y1p5xd-6 glBcvi Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__BubbleItem-sc-1y1p5xd-7 gROdwm Radio__BaseItem-sc-1y1p5xd-1 gUPocx"
    mb={null}
    mr={1}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-5-0"
      name="radio-5"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__BubbleItem-sc-1y1p5xd-7 gsefvY Radio__BaseItem-sc-1y1p5xd-1 fLjBva"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-5-1"
      name="radio-5"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "default" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 text-bold cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 bnxYLr"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-1-0"
      name="radio-1"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 kiDbHp"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-1-1"
      name="radio-1"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "show buttons" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 bnxYLr"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-3-0"
      name="radio-3"
      type="radio"
      value={0}
    />
    <label
      htmlFor="radio-3-0"
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 fwIeaq"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-3-1"
      name="radio-3"
      type="radio"
      value={1}
    />
    <label
      htmlFor="radio-3-1"
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "underlined" correctly 1`] = `
<ul
  className="Radio__UnderlinedList-sc-1y1p5xd-4 yPTIp Radio__NormalList-sc-1y1p5xd-2 Radio__UnderlinedList-sc-1y1p5xd-4 yPTIp text-bold cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__UnderlinedItem-sc-1y1p5xd-5 kaIiHA Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 ljpocb"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-2-0"
      name="radio-2"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__UnderlinedItem-sc-1y1p5xd-5 icIYCp Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 iVApZB"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-2-1"
      name="radio-2"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "vertical" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 cakGpL Radio__BaseList-sc-1y1p5xd-0 dVUlxC"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 dsZxQm"
    mb={1}
    mr={null}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-4-0"
      name="radio-4"
      type="radio"
      value={0}
    />
    <label
      htmlFor="radio-4-0"
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 fwIeaq"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-4-1"
      name="radio-4"
      type="radio"
      value={1}
    />
    <label
      htmlFor="radio-4-1"
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Select should render "default" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "kitchen_sink" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        , 
      </span>
      <span>
        Category
        
      </span>
    </span>
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "multiple" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        , 
      </span>
      <span>
        Category
        
      </span>
    </span>
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "search" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "sections" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      aria-label="chevrondown icon"
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`StackedCheckBox should render "Checked with color" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    aria-checked={true}
    className="flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "#A989C5",
        "border": "2px solid #A989C5",
        "borderRadius": 4,
        "height": 16,
        "width": 16,
      }
    }
    tabIndex="0"
  >
    <svg
      aria-label="check icon"
      className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
  <div
    aria-checked={true}
    className="absolute flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "#A989C5",
        "border": "2px solid #A989C5",
        "borderRadius": 4,
        "height": 16,
        "left": 3,
        "top": -3,
        "width": 16,
        "zIndex": -1,
      }
    }
    tabIndex="0"
  />
</div>
`;

exports[`StackedCheckBox should render "Checked" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    aria-checked={true}
    className="flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "#509EE3",
        "border": "2px solid #509EE3",
        "borderRadius": 4,
        "height": 16,
        "width": 16,
      }
    }
    tabIndex="0"
  >
    <svg
      aria-label="check icon"
      className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      role="img"
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
  <div
    aria-checked={true}
    className="absolute flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "#509EE3",
        "border": "2px solid #509EE3",
        "borderRadius": 4,
        "height": 16,
        "left": 3,
        "top": -3,
        "width": 16,
        "zIndex": -1,
      }
    }
    tabIndex="0"
  />
</div>
`;

exports[`StackedCheckBox should render "Off - Default" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    aria-checked={undefined}
    className="flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "white",
        "border": "2px solid #B8BBC3",
        "borderRadius": 4,
        "height": 16,
        "width": 16,
      }
    }
    tabIndex="0"
  />
  <div
    aria-checked={undefined}
    className="absolute flex align-center justify-center cursor-pointer"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="checkbox"
    style={
      Object {
        "backgroundColor": "white",
        "border": "2px solid #B8BBC3",
        "borderRadius": 4,
        "height": 16,
        "left": 3,
        "top": -3,
        "width": 16,
        "zIndex": -1,
      }
    }
    tabIndex="0"
  />
</div>
`;

exports[`Timeline should render "Constrained width" correctly 1`] = `
<div
  className="Timelineinfo__Container-g32h45-0 hGzZmq"
>
  <div
    className="Timeline__TimelineContainer-sc-1c86koa-0 cNPqnV"
  >
    <div
      className="Timeline__Border-sc-1c86koa-2 kmWXSN"
    />
    <div
      className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
    >
      <svg
        aria-label="verified icon"
        className="Icon Icon-verified text-light Icon-sc-1x67v3y-1 hFNRPZ"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M32 16.64a6.397 6.397 0 0 0-3.15-5.514 6.4 6.4 0 0 0-7.42-8.115A6.396 6.396 0 0 0 16 0a6.396 6.396 0 0 0-5.43 3.01 6.4 6.4 0 0 0-7.42 8.115A6.397 6.397 0 0 0 0 16.64c0 2.25 1.162 4.23 2.919 5.371a6.4 6.4 0 0 0 7.652 6.979A6.396 6.396 0 0 0 16 32a6.396 6.396 0 0 0 5.429-3.01 6.4 6.4 0 0 0 7.652-6.979A6.395 6.395 0 0 0 32 16.64z\\" fill=\\"#D3E7F8\\"/><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8.32 16.852l2.392-2.485 3.649 3.769 7.312-7.576 2.4 2.584-9.71 10.02-6.043-6.312z\\" fill=\\"#509EE3\\"/>",
          }
        }
        fill="currentcolor"
        height={20}
        role="img"
        viewBox="0 0 32 32"
        width={20}
      />
      <div
        className="ml1"
      >
        <div
          className="text-bold"
        >
          John Someone verified this
        </div>
        <div
          className="text-medium text-small"
        >
          a day ago
        </div>
        <div>
          idk lol
        </div>
      </div>
    </div>
    <div
      className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
    >
      <svg
        aria-label="pencil icon"
        className="Icon Icon-pencil text-light Icon-sc-1x67v3y-1 hFNRPZ"
        fill="currentcolor"
        height={20}
        role="img"
        viewBox="0 0 32 32"
        width={20}
      >
        <path
          d="M21.187 4.359L24.71.835c1.363-1.362 3.912-1.022 5.694.76 1.783 1.783 2.123 4.332.761 5.695l-3.523 3.523-6.455-6.454zM19.425 6.12L1.455 24.091C.091 25.453-.47 30.625.452 31.547c.922.922 6.094.361 7.456-1.001l17.97-17.971-6.454-6.455z"
        />
      </svg>
      <div
        className="ml1"
      >
        <div
          className="text-bold"
        >
          Foo edited this
        </div>
        <div
          className="text-medium text-small"
        >
          7 days ago
        </div>
        <div>
          Did a thing.
        </div>
      </div>
    </div>
    <div
      className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
    >
      <svg
        aria-label="warning_colorized icon"
        className="Icon Icon-warning_colorized text-light Icon-sc-1x67v3y-1 hFNRPZ"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.764 4.36c1.957-3.146 6.535-3.146 8.492 0l11.002 17.687c2.072 3.33-.323 7.64-4.246 7.64H5.008c-3.922 0-6.317-4.31-4.246-7.64L11.765 4.359zm6.414 19.002v.019c0 .309-.059.601-.175.874-.117.272-.28.509-.488.709a2.269 2.269 0 0 1-.723.465 2.336 2.336 0 0 1-.887.168c-.322 0-.623-.056-.898-.168a2.179 2.179 0 0 1-1.2-1.174 2.199 2.199 0 0 1-.175-.874c0-.31.059-.601.176-.87.116-.268.276-.501.48-.7a2.279 2.279 0 0 1 1.617-.646c.316 0 .614.058.89.174.273.116.513.272.72.47a2.153 2.153 0 0 1 .663 1.535v.018zm-.32-15.083v5.735c0 .711-.042 1.416-.127 2.115a31.535 31.535 0 0 1-.334 2.124l-.041.214h-2.834l-.04-.214a31.537 31.537 0 0 1-.335-2.124c-.085-.699-.127-1.404-.127-2.115V8.28h3.838z\\" fill=\\"#F2A86F\\"/>",
          }
        }
        fill="currentcolor"
        height={20}
        role="img"
        viewBox="0 0 32 32"
        width={20}
      />
      <div
        className="ml1"
      >
        <div
          className="text-bold"
        >
          Someone McSomeone thinks something looks wrong
        </div>
        <div
          className="text-medium text-small"
        >
          2 months ago
        </div>
        <div>
          Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. 
          Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not
        </div>
      </div>
    </div>
    <div
      className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
    >
      <svg
        aria-label="clarification icon"
        className="Icon Icon-clarification text-light Icon-sc-1x67v3y-1 hFNRPZ"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<rect width=\\"32\\" height=\\"32\\" rx=\\"16\\" fill=\\"#E1D9E8\\"/><path d=\\"M11.2 8.307a9.244 9.244 0 0 1 1.024-.742c.375-.23.777-.431 1.203-.602.427-.179.883-.316 1.37-.41a7.894 7.894 0 0 1 1.6-.153c.802 0 1.523.107 2.163.32.649.213 1.199.52 1.651.922.452.392.798.87 1.037 1.433.247.555.371 1.174.371 1.856 0 .649-.09 1.212-.269 1.69-.179.47-.405.879-.678 1.229-.273.35-.576.652-.909.908a40.2 40.2 0 0 1-.934.717c-.29.214-.546.427-.768.64a1.46 1.46 0 0 0-.41.717l-.358 1.792h-2.714l-.281-2.06c-.069-.419-.026-.782.128-1.089.153-.316.362-.597.627-.845.273-.256.576-.495.909-.716.332-.23.644-.474.934-.73a4.12 4.12 0 0 0 .73-.87c.204-.325.307-.709.307-1.152 0-.512-.17-.918-.512-1.216-.333-.308-.794-.461-1.383-.461-.452 0-.832.047-1.139.14-.298.094-.559.201-.78.32-.214.112-.402.214-.564.308a.963.963 0 0 1-.486.14.881.881 0 0 1-.82-.473L11.2 8.307zm2.355 14.938c0-.307.056-.593.167-.858.119-.264.277-.495.473-.691.205-.196.444-.35.717-.46.273-.12.572-.18.896-.18.316 0 .61.06.883.18.273.11.512.264.717.46.205.196.363.427.474.691.119.265.179.55.179.858 0 .307-.06.597-.18.87a2.038 2.038 0 0 1-.473.691c-.205.197-.444.35-.717.461a2.323 2.323 0 0 1-.883.167c-.324 0-.623-.056-.896-.167a2.245 2.245 0 0 1-.717-.46 2.31 2.31 0 0 1-.473-.692 2.289 2.289 0 0 1-.167-.87z\\" fill=\\"#A989C5\\"/>",
          }
        }
        fill="currentcolor"
        height={20}
        role="img"
        viewBox="0 0 32 32"
        width={20}
      />
      <div
        className="ml1"
      >
        <div
          className="text-bold"
        >
          Someone is confused
        </div>
        <div
          className="text-medium text-small"
        >
          a year ago
        </div>
        <div>
          Something something something something something something something something something something something something?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline should render "Optional footer" correctly 1`] = `
<div
  className="Timeline__TimelineContainer-sc-1c86koa-0 cNPqnV"
>
  <div
    className="Timeline__Border-sc-1c86koa-2 kmWXSN"
  />
  <div
    className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
  >
    <svg
      aria-label="verified icon"
      className="Icon Icon-verified text-light Icon-sc-1x67v3y-1 hFNRPZ"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M32 16.64a6.397 6.397 0 0 0-3.15-5.514 6.4 6.4 0 0 0-7.42-8.115A6.396 6.396 0 0 0 16 0a6.396 6.396 0 0 0-5.43 3.01 6.4 6.4 0 0 0-7.42 8.115A6.397 6.397 0 0 0 0 16.64c0 2.25 1.162 4.23 2.919 5.371a6.4 6.4 0 0 0 7.652 6.979A6.396 6.396 0 0 0 16 32a6.396 6.396 0 0 0 5.429-3.01 6.4 6.4 0 0 0 7.652-6.979A6.395 6.395 0 0 0 32 16.64z\\" fill=\\"#D3E7F8\\"/><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8.32 16.852l2.392-2.485 3.649 3.769 7.312-7.576 2.4 2.584-9.71 10.02-6.043-6.312z\\" fill=\\"#509EE3\\"/>",
        }
      }
      fill="currentcolor"
      height={20}
      role="img"
      viewBox="0 0 32 32"
      width={20}
    />
    <div
      className="ml1"
    >
      <div
        className="text-bold"
      >
        John Someone verified this
      </div>
      <div
        className="text-medium text-small"
      >
        a day ago
      </div>
      <div>
        idk lol
      </div>
      <div>
        <a
          className="text-underline"
          href="/_internal/components/timeline"
        >
          5 comments
        </a>
      </div>
    </div>
  </div>
  <div
    className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
  >
    <svg
      aria-label="pencil icon"
      className="Icon Icon-pencil text-light Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={20}
      role="img"
      viewBox="0 0 32 32"
      width={20}
    >
      <path
        d="M21.187 4.359L24.71.835c1.363-1.362 3.912-1.022 5.694.76 1.783 1.783 2.123 4.332.761 5.695l-3.523 3.523-6.455-6.454zM19.425 6.12L1.455 24.091C.091 25.453-.47 30.625.452 31.547c.922.922 6.094.361 7.456-1.001l17.97-17.971-6.454-6.455z"
      />
    </svg>
    <div
      className="ml1"
    >
      <div
        className="text-bold"
      >
        Foo edited this
      </div>
      <div
        className="text-medium text-small"
      >
        7 days ago
      </div>
      <div>
        Did a thing.
      </div>
      <div>
        
      </div>
    </div>
  </div>
  <div
    className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
  >
    <svg
      aria-label="warning_colorized icon"
      className="Icon Icon-warning_colorized text-light Icon-sc-1x67v3y-1 hFNRPZ"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.764 4.36c1.957-3.146 6.535-3.146 8.492 0l11.002 17.687c2.072 3.33-.323 7.64-4.246 7.64H5.008c-3.922 0-6.317-4.31-4.246-7.64L11.765 4.359zm6.414 19.002v.019c0 .309-.059.601-.175.874-.117.272-.28.509-.488.709a2.269 2.269 0 0 1-.723.465 2.336 2.336 0 0 1-.887.168c-.322 0-.623-.056-.898-.168a2.179 2.179 0 0 1-1.2-1.174 2.199 2.199 0 0 1-.175-.874c0-.31.059-.601.176-.87.116-.268.276-.501.48-.7a2.279 2.279 0 0 1 1.617-.646c.316 0 .614.058.89.174.273.116.513.272.72.47a2.153 2.153 0 0 1 .663 1.535v.018zm-.32-15.083v5.735c0 .711-.042 1.416-.127 2.115a31.535 31.535 0 0 1-.334 2.124l-.041.214h-2.834l-.04-.214a31.537 31.537 0 0 1-.335-2.124c-.085-.699-.127-1.404-.127-2.115V8.28h3.838z\\" fill=\\"#F2A86F\\"/>",
        }
      }
      fill="currentcolor"
      height={20}
      role="img"
      viewBox="0 0 32 32"
      width={20}
    />
    <div
      className="ml1"
    >
      <div
        className="text-bold"
      >
        Someone McSomeone thinks something looks wrong
      </div>
      <div
        className="text-medium text-small"
      >
        2 months ago
      </div>
      <div>
        Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. 
        Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not correct. Uh oh that's not
      </div>
      <div>
        
      </div>
    </div>
  </div>
  <div
    className="flex align-start justify-start mb2 Timeline__TimelineItem-sc-1c86koa-1 foqzPx"
  >
    <svg
      aria-label="clarification icon"
      className="Icon Icon-clarification text-light Icon-sc-1x67v3y-1 hFNRPZ"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<rect width=\\"32\\" height=\\"32\\" rx=\\"16\\" fill=\\"#E1D9E8\\"/><path d=\\"M11.2 8.307a9.244 9.244 0 0 1 1.024-.742c.375-.23.777-.431 1.203-.602.427-.179.883-.316 1.37-.41a7.894 7.894 0 0 1 1.6-.153c.802 0 1.523.107 2.163.32.649.213 1.199.52 1.651.922.452.392.798.87 1.037 1.433.247.555.371 1.174.371 1.856 0 .649-.09 1.212-.269 1.69-.179.47-.405.879-.678 1.229-.273.35-.576.652-.909.908a40.2 40.2 0 0 1-.934.717c-.29.214-.546.427-.768.64a1.46 1.46 0 0 0-.41.717l-.358 1.792h-2.714l-.281-2.06c-.069-.419-.026-.782.128-1.089.153-.316.362-.597.627-.845.273-.256.576-.495.909-.716.332-.23.644-.474.934-.73a4.12 4.12 0 0 0 .73-.87c.204-.325.307-.709.307-1.152 0-.512-.17-.918-.512-1.216-.333-.308-.794-.461-1.383-.461-.452 0-.832.047-1.139.14-.298.094-.559.201-.78.32-.214.112-.402.214-.564.308a.963.963 0 0 1-.486.14.881.881 0 0 1-.82-.473L11.2 8.307zm2.355 14.938c0-.307.056-.593.167-.858.119-.264.277-.495.473-.691.205-.196.444-.35.717-.46.273-.12.572-.18.896-.18.316 0 .61.06.883.18.273.11.512.264.717.46.205.196.363.427.474.691.119.265.179.55.179.858 0 .307-.06.597-.18.87a2.038 2.038 0 0 1-.473.691c-.205.197-.444.35-.717.461a2.323 2.323 0 0 1-.883.167c-.324 0-.623-.056-.896-.167a2.245 2.245 0 0 1-.717-.46 2.31 2.31 0 0 1-.473-.692 2.289 2.289 0 0 1-.167-.87z\\" fill=\\"#A989C5\\"/>",
        }
      }
      fill="currentcolor"
      height={20}
      role="img"
      viewBox="0 0 32 32"
      width={20}
    />
    <div
      className="ml1"
    >
      <div
        className="text-bold"
      >
        Someone is confused
      </div>
      <div
        className="text-medium text-small"
      >
        a year ago
      </div>
      <div>
        Something something something something something something something something something something something something?
      </div>
      <div>
        <a
          className="text-underline"
          href="/_internal/components/timeline"
        >
          123 comments
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toggle should render "off" correctly 1`] = `
<a
  className="no-decoration"
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`Toggle should render "on" correctly 1`] = `
<a
  className="no-decoration"
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`TokenField should render "" correctly 1`] = `
<div>
  <ul
    className="pl1 pt1 pb0 pr0 flex flex-wrap bg-white scroll-x scroll-y"
    onMouseDownCapture={[Function]}
    style={
      Object {
        "maxHeight": 130,
      }
    }
  >
    <li
      className="flex-full flex align-center mr1 mb1 p1"
    >
      <input
        autoFocus={false}
        className="full no-focus borderless px1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        placeholder={undefined}
        size={10}
        style={
          Object {
            "fontSize": 14,
            "fontWeight": 700,
          }
        }
        value=""
      />
    </li>
  </ul>
  <ul
    className="pl1 my1 scroll-y scroll-show border-bottom"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Doohickey
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gadget
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gizmo
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Widget
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TokenField should render "updateOnInputChange" correctly 1`] = `
<div>
  <ul
    className="pl1 pt1 pb0 pr0 flex flex-wrap bg-white scroll-x scroll-y"
    onMouseDownCapture={[Function]}
    style={
      Object {
        "maxHeight": 130,
      }
    }
  >
    <li
      className="flex-full flex align-center mr1 mb1 p1"
    >
      <input
        autoFocus={false}
        className="full no-focus borderless px1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        placeholder={undefined}
        size={10}
        style={
          Object {
            "fontSize": 14,
            "fontWeight": 700,
          }
        }
        value=""
      />
    </li>
  </ul>
  <ul
    className="pl1 my1 scroll-y scroll-show border-bottom"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Doohickey
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gadget
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gizmo
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Widget
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`UserAvatar should render "" correctly 1`] = `
<div
  className="UserAvatar-sc-1vvsbyl-1 dGmEol UserAvatar__Avatar-sc-1vvsbyl-0 bmsXls sc-bwzfXH isShpR"
>
  ?
</div>
`;
